# GoldenPendulumMTL

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compare_methods.py
examples/: finance_4task_demo.ipynb  huggingface_integration.py  lightning_integration.py  multi_head_transformer.py  pro_features.py  quickstart.py
golden_pendulum/: __init__.py  callbacks.py  core.py
golden_pendulum/pro/: __init__.py  adaptive.py  curriculum.py  diagnostics.py  dynamic_k.py  presets.py
tests/: test_callbacks.py  test_core.py  test_pro.py
